<?xml version="1.0"?>
<package format="3">
  <name>butler_bot</name>
  <version>0.1.0</version>
  <description>
    A launch-only package that brings up Butler_Bot in Gazebo with Nav2 and web interface.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Runtime / exec dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  
  <build_depend>rclcpp</build_depend>
  
  <depend>behaviortree_cpp_v3</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>std_msgs</depend>
  <build_depend>example_interfaces</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>example_interfaces</exec_depend>

  <!-- For YAML parameter files -->
  <exec_depend>yaml_cpp_vendor</exec_depend>

  <!-- Python dependencies for web server -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-flask</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>